import react-native-video-player

--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.1",
     "react-native": "0.39.2",
+    "react-native-video-player": "^0.5.0",
     "react-native-vlcplayer": "^0.1.2"
   },
   "devDependencies": {
